--- a/files/内容管理_1/styles.css
+++ b/files/内容管理_1/styles.css
@@ -4835,3 +4835,28 @@
   border-color:transparent;
   outline-style:none;
 }
+#u1664_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:40px;
+  height:25px;
+}
+#u1664 {
+  border-width:0px;
+  position:absolute;
+  left:927px;
+  top:658px;
+  width:39px;
+  height:24px;
+}
+#u1664_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
